--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,225 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&subset=cyrillic");
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+
+body {
+  line-height: 1;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+blockquote,
+q {
+  quotes: none;
+}
+
+blockquote:before, blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+body {
+  font-family: "Open Sans";
+  font-size: 13px;
+  color: #1f2021;
+  max-width: 100%;
+}
+
+header {
+  width: 100%;
+  height: 100vh;
+  color: #fff;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.65)), to(rgba(0, 0, 0, 0.65))), url(../img/image-1.png);
+  background: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)), url(../img/image-1.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+header .navbar {
+  background: none;
+  border-bottom: 4px solid rgba(0, 196, 250, 0.5);
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+}
+
+header .navbar .navigation-bar {
+  max-width: 1000px;
+  margin: 0 auto;
+}
+
+header .navbar .navigation-bar .navbar-header .navbar-brand {
+  background: url(../img/logo.png) center/contain no-repeat;
+  width: 100px;
+  height: 50px;
+  margin: 7px 0px;
+}
+
+header .navbar #navbar .navbar-nav li a.active {
+  color: #00c7fc;
+  background: none;
+}
+
+header .navbar #navbar .navbar-nav li {
+  padding: 25px 15px;
+}
+
+header .navbar #navbar .navbar-nav li a {
+  font-size: 13px;
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: 500;
+  padding: 2px;
+}
+
+header .navbar #navbar .navbar-nav li a:hover {
+  border-bottom: 2px solid #00c7fc;
+  padding-bottom: 0px;
+  background: none;
+}
+
+header .container-fluid {
+  position: absolute;
+  top: 60%;
+  -webkit-transform: translateY(-60%);
+          transform: translateY(-60%);
+}
+
+header .container-fluid .title-container {
+  background-color: rgba(0, 196, 250, 0.5);
+  height: 100%;
+}
+
+header .container-fluid .title-container .title-text {
+  padding: 35px;
+  max-width: 70%;
+  float: right;
+}
+
+header .container-fluid .title-container .title-text h1 {
+  font-size: 30px;
+  font-weight: 400;
+  text-transform: uppercase;
+  line-height: 1.6;
+}
+
+header .container-fluid .title-container .title-text h1 span {
+  text-transform: none;
+}
+
+header .container-fluid .title-container .title-text p {
+  padding: 25px 0px;
+  line-height: 2;
+  font-weight: 300;
+}
+/*# sourceMappingURL=style.css.map */
