--- a/css/style.scss
+++ b/css/style.scss
@@ -233,3 +233,38 @@ header {
         }
     }
 }
+// SERVICES
+#services {
+    .services-grid {
+        .service-box {
+            margin: 15px;
+            padding: $top-padding;
+            cursor: pointer;
+
+        }
+        .service-box:hover {
+            .service-icon img {
+                border: 2px solid $color-cyan;
+                border-radius: 100%;
+                padding: 20px;
+                margin: -22px;
+            }
+        }
+        .service-icon {
+            display: inline-block;
+            padding: 10px $top-padding;
+        }
+        .service-text {
+            line-height: 1.6;
+            h1 {
+                font-size: $services-title;
+                color: $color-cyan;
+                font-weight: 400;
+                padding-bottom: $top-padding;
+            }
+            p {
+                color: $color-gray;
+            }
+        }
+    }
+}
