--- a/css/style.css
+++ b/css/style.css
@@ -135,6 +135,47 @@ body {
   max-width: 100%;
 }
 
+section {
+  margin-top: 80px;
+}
+
+.section-title h1 {
+  font-size: 30px;
+  text-transform: uppercase;
+  font-weight: 400;
+  line-height: 1.6;
+}
+
+.section-title .divider {
+  margin: 20px auto;
+  width: 100px;
+  position: relative;
+}
+
+.section-title .dividermask:after {
+  content: '';
+  display: block;
+  border-top: 1px solid #1f2021;
+}
+
+.section-title .divider span {
+  width: 12px;
+  height: 12px;
+  position: absolute;
+  margin-top: -6px;
+  margin-left: -4px;
+  border-radius: 100%;
+  background-color: #fff;
+  border: 1px solid #1f2021;
+}
+
+.section-title p {
+  color: #b4b4b4;
+  max-width: 500px;
+  margin: 0 auto;
+  line-height: 1.6;
+}
+
 header {
   width: 100%;
   height: 100vh;
