--- a/css/style.scss
+++ b/css/style.scss
@@ -151,6 +151,43 @@ body {
     max-width: 100%;
 }
 
+section {
+    margin-top: 80px;
+}
+.section-title {
+    h1 {
+        font-size: $title-size;
+        text-transform: uppercase;
+        font-weight: 400;
+        line-height: 1.6;
+    }
+    .divider {
+        margin: 20px auto;
+        width: 100px;
+        position: relative;
+    }
+    .dividermask:after {
+        content: '';
+        display: block;
+        border-top: 1px solid $font-color;
+    }
+    .divider span {
+        width: 12px;
+        height: 12px;
+        position: absolute;
+        margin-top: -6px;
+        margin-left: -4px;
+        border-radius: 100%;
+        background-color: $color-white;
+        border: 1px solid $font-color;
+    }
+    p {
+        color: $color-gray;
+        max-width: 500px;
+        margin: 0 auto;
+        line-height: 1.6;
+    }
+}
 
 // HEADER
 header {
