--- a/css/style.scss
+++ b/css/style.scss
@@ -305,3 +305,31 @@ header {
         }
     }
 }
+// BACKGROUND WITH TEXT
+#bg-text .container-fluid {
+    background: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.45)), url(../img/image-2.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    .col-md-12 {
+        margin: 100px 0px;
+        padding: 50px;
+        .bg-text {
+            max-width: 1000px;
+            margin: 0px auto;
+            padding: 100px 25px;
+            background-color: $cyan-opacity;
+            color: $color-white;
+            h1 {
+                font-size: $quote-size;
+                text-transform: uppercase;
+                line-height: 1.6;
+            }
+            p {
+                font-size: 16px;
+                font-weight: 400;
+                line-height: 2;
+            }
+        }
+    }
+}
