--- a/css/style.scss
+++ b/css/style.scss
@@ -333,3 +333,68 @@ header {
         }
     }
 }
+// CONTACT US
+#contact {
+    .row {
+        padding: 0px 100px;
+    }
+    .contacts {
+        padding: $top-padding;
+        .form-area {
+            padding: 50px 0px;
+            form {
+                .form-group {
+                    input,
+                    textarea {
+                        border: 1px solid #dbdbdb;
+                        border-radius: 0px;
+                        padding: $top-padding;
+                    }
+                }
+                .btn {
+                    background-color: $color-cyan;
+                    color: $color-white;
+                    text-transform: uppercase;
+                    border-radius: 0px;
+                    padding: 15px 50px;
+                    margin-top: 25px;
+                    transition: all 0.4s ease;
+                }
+                .btn:hover {
+                    background-color: $color-white;
+                    color: $color-cyan;
+                    box-shadow: 0px 0px 0px 1px #dbdbdb;
+                    transition: all 0.4s ease;
+                }
+            }
+        }
+    }
+    .contacts-info {
+        padding: $top-padding 0px;
+        .contact-details,.contact-location {
+            padding-top: 25px;
+            h1 {
+                text-transform: uppercase;
+                font-weight: 600;
+                line-height: 5;
+            }
+            p{
+                color: $color-gray;
+                line-height: 2;
+                transition: color 0.4s ease;
+            }
+            a:hover, a:focus {
+                text-decoration:none;
+                p{
+                    color: $color-cyan;
+                    transition: color 0.4s ease;
+                }
+            }
+        }
+    }
+    ::placeholder {
+        color: $font-color !important;
+        font-weight: 600;
+        text-transform: uppercase;
+    }
+}
