--- a/css/style.css
+++ b/css/style.css
@@ -467,4 +467,107 @@ footer .footer-credits {
 footer .footer-credits span {
   color: #00c7fc;
 }
+
+@media only screen and (max-width: 820px) {
+  header .navbar {
+    -webkit-transition: background 0.4s ease;
+    transition: background 0.4s ease;
+  }
+  header .navbar .navigation-bar .navbar-header .navbar-toggle {
+    background: #00c7fc !important;
+    padding: 10px 15px;
+    border: none;
+  }
+  header .navbar .navigation-bar .navbar-header .navbar-toggle .icon-bar {
+    height: 5px;
+  }
+  header .navbar #navbar {
+    max-height: 100%;
+    background-color: #fff;
+  }
+  header .navbar #navbar .navbar-nav {
+    text-align: center;
+  }
+  header .navbar #navbar .navbar-nav li {
+    padding: 25px 15px;
+  }
+  header .navbar #navbar .navbar-nav li a {
+    color: #1f2021;
+    font-weight: 600;
+  }
+  header .navbar #navbar .navbar-nav li a:hover {
+    background-color: #00c7fc;
+    color: #fff;
+  }
+  header .container-fluid {
+    position: relative;
+    background-color: rgba(0, 196, 250, 0.5);
+    margin: 5px 10px 25px 0px;
+    top: 50%;
+  }
+  header .container-fluid .title-container {
+    height: 100%;
+  }
+  header .container-fluid .title-container .title-text {
+    padding: 5px;
+    max-width: 100%;
+    float: none;
+  }
+  header .container-fluid .title-container .title-text h1 {
+    font-size: 24px;
+    line-height: 1.6;
+  }
+  header .container-fluid .title-container .title-text p {
+    font-weight: 300;
+    letter-spacing: 1px;
+  }
+  #services .services-grid .service-icon {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  #services .services-grid .service-text {
+    text-align: center;
+  }
+  #bg-text .container-fluid .col-md-12 {
+    margin: 25px 0px;
+    padding: 25px;
+  }
+  #bg-text .container-fluid .col-md-12 .bg-text {
+    padding: 100px 5px;
+  }
+  #bg-text .container-fluid .col-md-12 .bg-text h1 {
+    font-size: 20px;
+    line-height: 1.2;
+  }
+  #contact .row {
+    padding: 0px;
+  }
+  #contact .contacts {
+    padding: 25px;
+  }
+  #contact .contacts .form-area form {
+    text-align: center;
+  }
+  #contact .contacts .form-area form .btn {
+    float: none !important;
+  }
+  #contact .contacts-info {
+    padding: 0px;
+    text-align: center;
+  }
+  #contact .contacts-info .contact-details, #contact .contacts-info .contact-location {
+    padding-top: 0px;
+  }
+  #contact .contacts-info .contact-details h1, #contact .contacts-info .contact-location h1 {
+    font-size: 24px;
+    line-height: 3.5;
+  }
+  #contact .contacts-info .contact-details p, #contact .contacts-info .contact-location p {
+    font-size: 16px;
+  }
+}
 /*# sourceMappingURL=style.css.map */
