--- a/css/style.scss
+++ b/css/style.scss
@@ -437,3 +437,121 @@ footer {
         }
     }
 }
+// RESPONSIVE
+@media only screen and (max-width: 820px) {
+    // HEADER
+    header {
+        .navbar {
+            transition: background 0.4s ease;
+            .navigation-bar {
+                .navbar-header {
+                    .navbar-toggle {
+                        background: $color-cyan !important;
+                        padding: 10px 15px;
+                        border: none;
+                        .icon-bar {
+                            height: 5px;
+                        }
+                    }
+                }
+            }
+            #navbar {
+                max-height: 100%;
+                background-color: $color-white;
+                .navbar-nav {
+                    text-align:center;
+                    li {
+                        padding: $top-padding 15px;
+                        a {
+                            color: $font-color;
+                            font-weight: 600;
+                        }
+                        a:hover {
+                            background-color: $color-cyan;
+                            color: $color-white;
+                        }
+                    }
+                }
+            }
+        }
+        .container-fluid {
+            position: relative;
+            background-color: $cyan-opacity;
+            margin: 5px 10px 25px 0px;
+            top:50%;
+            .title-container {
+                height: 100%;
+                .title-text {
+                    padding: 5px;
+                    max-width: 100%;
+                    float: none;
+                    h1 {
+                        font-size: 24px;
+                        line-height: 1.6;
+                    }
+                    p{
+                        font-weight: 300;
+                        letter-spacing: 1px;
+                    }
+                }
+            }
+        }
+    }
+    // SERVICES
+    #services {
+        .services-grid {
+            .service-icon{
+                    display: flex;
+                    justify-content: center;
+            }
+            .service-text {
+                text-align:center;
+            }
+        }
+    }
+    // BACKGROUND WITH TEXT
+    #bg-text .container-fluid {
+        .col-md-12 {
+            margin: 25px 0px;
+            padding: 25px;
+            .bg-text {
+                padding: 100px 5px;
+                h1 {
+                    font-size: 20px;
+                    line-height: 1.2;
+                }
+            }
+        }
+    }
+    // CONTACT US
+    #contact {
+        .row {
+            padding: 0px;
+        }
+        .contacts {
+            padding: $top-padding;
+            .form-area {
+                form {
+                    text-align:center;
+                    .btn {
+                        float: none !important;
+                    }
+                }
+            }
+        }
+        .contacts-info {
+            padding: 0px;
+            text-align:center;
+            .contact-details,.contact-location {
+                padding-top: 0px;
+                h1 {
+                    font-size: $quote-size;
+                    line-height: 3.5;
+                }
+                p{
+                    font-size: 16px;
+                }
+            }
+        }
+    }
+    }
