--- a/css/style.scss
+++ b/css/style.scss
@@ -280,7 +280,7 @@ header {
 
         }
         .service-box:hover {
-            .service-icon img {
+            .service-icon embed {
                 border: 2px solid $color-cyan;
                 border-radius: 100%;
                 padding: 20px;
