--- a/css/style.scss
+++ b/css/style.scss
@@ -150,7 +150,6 @@ body {
     color: $font-color;
     max-width: 100%;
 }
-
 section {
     margin-top: 80px;
 }
@@ -241,6 +240,33 @@ header {
             }
         }
     }
+    
+    .navbar-fixed-top {
+        background:  $color-white;
+        transition: all 0.4s ease;
+        .navigation-bar {
+            .navbar-header {
+                .navbar-brand {
+                    background: url(../img/logo-black.png) center / contain no-repeat;
+                }
+            }
+        }
+        #navbar {
+            .navbar-nav {
+                .active {
+                    a {
+                        color: $color-cyan;
+                    }
+                }
+                li {
+                    a {
+                        color: $font-color;
+                        font-weight: 600;
+                    }
+                }
+            }
+        }
+    }
     .container-fluid {
         position: absolute;
         top: 60%;
@@ -270,6 +296,7 @@ header {
         }
     }
 }
+
 // SERVICES
 #services {
     .services-grid {
@@ -305,6 +332,7 @@ header {
         }
     }
 }
+
 // BACKGROUND WITH TEXT
 #bg-text .container-fluid {
     background: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.45)), url(../img/image-2.png);
@@ -333,6 +361,7 @@ header {
         }
     }
 }
+
 // CONTACT US
 #contact {
     .row {
@@ -425,6 +454,10 @@ footer {
         p{
             i{
                 padding: 0px 15px;
+                cursor: pointer;
+            }
+            i:hover {
+                color: $color-cyan;
             }
         }
     }
@@ -437,121 +470,227 @@ footer {
         }
     }
 }
+// MODAL
+.close-modal {
+    position: fixed;
+    top: 5%;
+    right: 5%;
+    cursor: pointer;
+    .close-modal img {
+        width: 25px;
+        height: 25px;
+    }
+}
+.modal-content {
+    margin: 20% auto;
+    border-radius: 0px;
+    text-transform: uppercase;
+    padding: $top-padding 10px;
+    max-width: 500px;
+
+    h1 {
+        font-size: $quote-size;
+    }
+    form {
+        padding: $top-padding 0px 15px 0px;
+        label {
+            font-weight: 600;
+            letter-spacing: 1.2;
+            padding: 5px 0px;
+        }
+        input,
+        textarea {
+            border: 1px solid #dbdbdb;
+            border-radius: 0px;
+            padding: $top-padding;
+        }
+        .checkbox {
+            text-transform: initial;
+            text-align: center;
+        }
+        #checkbox-1 {
+            position: absolute;
+            opacity: 0;
+            & + label {
+              position: relative;
+              cursor: pointer;
+              padding: 0;
+            }
+            & + label:before {
+              content: '';
+              margin-right: 5px;
+              display: inline-block;
+              vertical-align: text-top;
+              width: 20px;
+              height: 20px;
+              background: #dbdbdb;
+            }
+            &:hover + label:before {
+                background: $color-cyan;
+            }
+             &:focus + label:before {
+              box-shadow: 0 0 0 1px $font-color;
+            }
+            &:checked + label:before {
+              background: $color-cyan;
+            }
+            &:checked + label:after {
+              content: '';
+              position: absolute;
+              left: 5px;
+              top: 9px;
+              background: $font-color;
+              width: 3px;
+              height: 3px;
+              box-shadow: 
+                2px 0 0 $font-color,
+                4px 0 0 $font-color,
+                4px -2px 0 $font-color,
+                4px -4px 0 $font-color,
+                4px -6px 0 $font-color,
+                4px -8px 0 $font-color;
+              transform: rotate(45deg);
+            }
+          }
+        .btn {
+            background-color: $color-cyan;
+            color: $color-white;
+            text-transform: uppercase;
+            border-radius: 0px;
+            padding: 15px 50px;
+            margin-top: 25px;
+            transition: all 0.4s ease;
+            margin: 0 auto;
+            display: block;
+        }
+        .btn:hover {
+            background-color: $color-white;
+            color: $color-cyan;
+            box-shadow: 0px 0px 0px 1px #dbdbdb;
+            transition: all 0.4s ease;
+        }
+    }
+    ::placeholder {
+        color: $color-gray;
+        font-weight: 400;
+        text-transform: uppercase;
+    }
+}
 // RESPONSIVE
 @media only screen and (max-width: 820px) {
-    // HEADER
-    header {
-        .navbar {
-            transition: background 0.4s ease;
-            .navigation-bar {
-                .navbar-header {
-                    .navbar-toggle {
-                        background: $color-cyan !important;
-                        padding: 10px 15px;
-                        border: none;
-                        .icon-bar {
-                            height: 5px;
-                        }
-                    }
-                }
-            }
-            #navbar {
-                max-height: 100%;
-                background-color: $color-white;
-                .navbar-nav {
-                    text-align:center;
-                    li {
-                        padding: $top-padding 15px;
-                        a {
-                            color: $font-color;
-                            font-weight: 600;
-                        }
-                        a:hover {
-                            background-color: $color-cyan;
-                            color: $color-white;
-                        }
+// HEADER
+header {
+    .navbar {
+        transition: background 0.4s ease;
+        .navigation-bar {
+            .navbar-header {
+                .navbar-toggle {
+                    background: $color-cyan !important;
+                    padding: 10px 15px;
+                    border: none;
+                    .icon-bar {
+                        height: 5px;
                     }
                 }
             }
         }
-        .container-fluid {
-            position: relative;
-            background-color: $cyan-opacity;
-            margin: 5px 10px 25px 0px;
-            top:50%;
-            .title-container {
-                height: 100%;
-                .title-text {
-                    padding: 5px;
-                    max-width: 100%;
-                    float: none;
-                    h1 {
-                        font-size: 24px;
-                        line-height: 1.6;
-                    }
-                    p{
-                        font-weight: 300;
-                        letter-spacing: 1px;
-                    }
-                }
-            }
-        }
-    }
-    // SERVICES
-    #services {
-        .services-grid {
-            .service-icon{
-                    display: flex;
-                    justify-content: center;
-            }
-            .service-text {
+        #navbar {
+            max-height: 100%;
+            background-color: $color-white;
+            .navbar-nav {
                 text-align:center;
-            }
-        }
-    }
-    // BACKGROUND WITH TEXT
-    #bg-text .container-fluid {
-        .col-md-12 {
-            margin: 25px 0px;
-            padding: 25px;
-            .bg-text {
-                padding: 100px 5px;
-                h1 {
-                    font-size: 20px;
-                    line-height: 1.2;
-                }
-            }
-        }
-    }
-    // CONTACT US
-    #contact {
-        .row {
-            padding: 0px;
-        }
-        .contacts {
-            padding: $top-padding;
-            .form-area {
-                form {
-                    text-align:center;
-                    .btn {
-                        float: none !important;
+                li {
+                    padding: $top-padding 15px;
+                    a {
+                        color: $font-color;
+                        font-weight: 600;
+                    }
+                    a:hover {
+                        background-color: $color-cyan;
+                        color: $color-white;
                     }
                 }
             }
         }
-        .contacts-info {
-            padding: 0px;
-            text-align:center;
-            .contact-details,.contact-location {
-                padding-top: 0px;
+    }
+    .container-fluid {
+        position: relative;
+        background-color: $cyan-opacity;
+        margin: 5px 10px 25px 0px;
+        top:50%;
+        .title-container {
+            height: 100%;
+            .title-text {
+                padding: 5px;
+                max-width: 100%;
+                float: none;
                 h1 {
-                    font-size: $quote-size;
-                    line-height: 3.5;
+                    font-size: 24px;
+                    line-height: 1.6;
                 }
                 p{
-                    font-size: 16px;
+                    font-weight: 300;
+                    letter-spacing: 1px;
                 }
             }
         }
     }
+}
+// SERVICES
+#services {
+    .services-grid {
+        .service-icon{
+                display: flex;
+                justify-content: center;
+        }
+        .service-text {
+            text-align:center;
+        }
     }
+}
+// BACKGROUND WITH TEXT
+#bg-text .container-fluid {
+    .col-md-12 {
+        margin: 25px 0px;
+        padding: 25px;
+        .bg-text {
+            padding: 100px 5px;
+            h1 {
+                font-size: 20px;
+                line-height: 1.2;
+            }
+        }
+    }
+}
+// CONTACT US
+#contact {
+    .row {
+        padding: 0px;
+    }
+    .contacts {
+        padding: $top-padding;
+        .form-area {
+            form {
+                text-align:center;
+                .btn {
+                    float: none !important;
+                }
+            }
+        }
+    }
+    .contacts-info {
+        padding: 0px;
+        text-align:center;
+        .contact-details,.contact-location {
+            padding-top: 0px;
+            h1 {
+                font-size: $quote-size;
+                line-height: 3.5;
+            }
+            p{
+                font-size: 16px;
+            }
+        }
+    }
+}
+}
