--- a/css/style.css
+++ b/css/style.css
@@ -195,14 +195,13 @@ header .navbar {
 }
 
 header .navbar .navigation-bar {
-  max-width: 1000px;
-  margin: 0 auto;
+  width: 100%;
 }
 
 header .navbar .navigation-bar .navbar-header .navbar-brand {
   background: url(../img/logo.png) center/contain no-repeat;
   width: 100px;
-  height: 50px;
+  height: 45px;
   margin: 7px 0px;
 }
 
@@ -212,7 +211,7 @@ header .navbar #navbar .navbar-nav li a.active {
 }
 
 header .navbar #navbar .navbar-nav li {
-  padding: 25px 15px;
+  padding: 15px;
 }
 
 header .navbar #navbar .navbar-nav li a {
@@ -261,9 +260,8 @@ header .container-fluid .title-container {
 }
 
 header .container-fluid .title-container .title-text {
+  margin-left: 25px;
   padding: 35px;
-  max-width: 70%;
-  float: right;
 }
 
 header .container-fluid .title-container .title-text h1 {
@@ -289,16 +287,16 @@ header .container-fluid .title-container .title-text p {
   cursor: pointer;
 }
 
+#services .services-grid .service-icon {
+  display: inline-block;
+  padding: 10px 25px;
+}
+
 #services .services-grid .service-box:hover .service-icon img {
   border: 2px solid #00c7fc;
   border-radius: 100%;
   padding: 20px;
   margin: -22px;
-}
-
-#services .services-grid .service-icon {
-  display: inline-block;
-  padding: 10px 25px;
 }
 
 #services .services-grid .service-text {
@@ -326,11 +324,9 @@ header .container-fluid .title-container .title-text p {
 
 #bg-text .container-fluid .col-md-12 {
   margin: 100px 0px;
-  padding: 50px;
 }
 
 #bg-text .container-fluid .col-md-12 .bg-text {
-  max-width: 1000px;
   margin: 0px auto;
   padding: 100px 25px;
   background-color: rgba(0, 196, 250, 0.5);
@@ -402,7 +398,7 @@ header .container-fluid .title-container .title-text p {
   line-height: 5;
 }
 
-#contact .contacts-info .contact-details p, #contact .contacts-info .contact-location p {
+#contact .contacts-info .contact-details a, #contact .contacts-info .contact-location a {
   color: #b4b4b4;
   line-height: 2;
   -webkit-transition: color 0.4s ease;
@@ -411,9 +407,6 @@ header .container-fluid .title-container .title-text p {
 
 #contact .contacts-info .contact-details a:hover, #contact .contacts-info .contact-details a:focus, #contact .contacts-info .contact-location a:hover, #contact .contacts-info .contact-location a:focus {
   text-decoration: none;
-}
-
-#contact .contacts-info .contact-details a:hover p, #contact .contacts-info .contact-details a:focus p, #contact .contacts-info .contact-location a:hover p, #contact .contacts-info .contact-location a:focus p {
   color: #00c7fc;
   -webkit-transition: color 0.4s ease;
   transition: color 0.4s ease;
@@ -632,7 +625,80 @@ footer .footer-credits span {
   text-transform: uppercase;
 }
 
-@media only screen and (max-width: 820px) {
+@media only screen and (max-width: 1024px) {
+  header .container-fluid {
+    position: relative;
+    background-color: rgba(0, 196, 250, 0.5);
+    margin: 5px 10px 25px 0px;
+    top: 50%;
+  }
+  header .container-fluid .title-container {
+    background: none;
+  }
+  header .container-fluid .title-container .title-text {
+    padding: 5px;
+    max-width: 100%;
+    float: none;
+  }
+  header .container-fluid .title-container .title-text h1 {
+    font-size: 24px;
+    line-height: 1.6;
+  }
+  header .container-fluid .title-container .title-text p {
+    font-weight: 300;
+    letter-spacing: 1px;
+  }
+  #services .services-grid .service-icon {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  #services .services-grid .service-text {
+    text-align: center;
+  }
+  #bg-text .container-fluid .col-md-12 {
+    margin: 25px 0px;
+    padding: 25px;
+  }
+  #bg-text .container-fluid .col-md-12 .bg-text {
+    padding: 100px 5px;
+  }
+  #bg-text .container-fluid .col-md-12 .bg-text h1 {
+    font-size: 20px;
+    line-height: 1.2;
+  }
+  #contact .row {
+    padding: 0px;
+  }
+  #contact .contacts {
+    padding: 25px;
+  }
+  #contact .contacts .form-area form {
+    text-align: center;
+  }
+  #contact .contacts .form-area form .btn {
+    float: none !important;
+  }
+  #contact .contacts-info {
+    padding: 0px;
+    text-align: center;
+  }
+  #contact .contacts-info .contact-details, #contact .contacts-info .contact-location {
+    padding-top: 0px;
+  }
+  #contact .contacts-info .contact-details h1, #contact .contacts-info .contact-location h1 {
+    font-size: 24px;
+    line-height: 3.5;
+  }
+  #contact .contacts-info .contact-details p, #contact .contacts-info .contact-location p {
+    font-size: 16px;
+  }
+}
+
+@media only screen and (max-width: 700px) {
   header .navbar {
     -webkit-transition: background 0.4s ease;
     transition: background 0.4s ease;
