--- a/css/style.scss
+++ b/css/style.scss
@@ -204,12 +204,11 @@ header {
         transition: all 0.4s ease;
 
         .navigation-bar {
-            width: 100%;
-
+            width: 95%;
             .navbar-header {
                 .navbar-brand {
                     background: url(../img/logo.png) center / contain no-repeat;
-                    width: 100px;
+                    width: 45px;
                     height: 45px;
                     margin: 7px 0px;
                 }
@@ -308,18 +307,28 @@ header {
 
         }
         .service-icon {
-            display: inline-block;
-            padding: 10px 25px;
+
+            img {
+            }
             
         }
         .service-box:hover {
             .service-icon {
-                
-                img {
+                span {
                     border: 2px solid $color-cyan;
                     border-radius: 100%;
                     padding: 20px;
                     margin: -22px;
+                    position: absolute;
+                    top: 0%;
+                }
+
+                img {
+                    // border: 2px solid $color-cyan;
+                    // border-radius: 20%;
+                    // padding: 20px;
+                    // margin: -22px;
+                    // overflow: hidden;
                 }
             }
         }
@@ -582,15 +591,11 @@ footer {
     header {
         .container-fluid {
             position: relative;
-            background-color: $cyan-opacity;
-            margin: 5px 10px 25px 0px;
             top:50%;
             .title-container {
-                    background: none;
                 .title-text {
                     padding: 5px;
                     max-width: 100%;
-                    float: none;
                     h1 {
                         font-size: 24px;
                         line-height: 1.6;
@@ -700,10 +705,7 @@ header {
         }
     }
     .container-fluid {
-        position: relative;
-        background-color: $cyan-opacity;
-        margin: 5px 10px 25px 0px;
-        top:50%;
+
         .title-container {
             height: 100%;
             .title-text {
