--- a/css/style.scss
+++ b/css/style.scss
@@ -268,6 +268,7 @@ header {
     }
     .container-fluid {
         position: absolute;
+        width: 100%;
         top: 60%;
         transform: translateY(-60%);
         .title-container {
